# ai-chatbot

./: .flake8  CONTRIBUTING.md  Changelog.md  Changelog.rst  LICENSE  PythonBot.spec  README.md  app-icon.icns  create-app.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
ai-chatbot/: main.py  setup_ai.py
assets/: app-icon.icns
src/: about_window.py  error_window.py  main.py  setup_ai.py
