[metadata]
name = ai-chatbot
version = 1.0
author = Bodo Schönfeld
author_email = bodo.schoenfeld@niftycode.de
url = https://github.com/niftycode/ai-chatbot
description = Fetch Python related answers from OpenAI
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
requires_python = >=3.10
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
packages = find:
setup_requires =
    setuptools >=69.0.0
install_requires =
    openai

[options.entry_points]
console_scripts =
    ai-chatbot = ai-chatbot.main:main

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1
