[metadata]
name = PythonBot
version = 0.1.1
author = Bodo Schönfeld
author_email = bodo.schoenfeld@niftycode.de
url = https://niftycode.eu
description = AI chatbot for Python development.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
requires_python = >=3.12
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
packages = find:
setup_requires =
    setuptools >=70.0.0
install_requires =
    setuptools

[options.entry_points]
console_scripts =
    ai-chatbot = src.main:main [setup_ai]

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1
